@@ -1,3 +1,9 @@
+2017-12-01         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* intprops.h: Sync with GNULIB.
+	* regcomp.c (init_word): Move general_case label inside ifdef.
+	* regex.h: Don't define __USE_GNU. Brings closer to GLIBC regex.
+
 2017-11-26         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* regcomp.c regex_internal.c, regex_internal.h, regexec.c: Sync
